fix android nav bar jumping background

--- a/public/cvsite.css
+++ b/public/cvsite.css
@@ -116,11 +116,14 @@ footer{
 
  
 @media screen and (max-device-width: 640px) {
-
-body{
-	margin:0;
-	
+html {
+    overflow: hidden;
 }
+body {
+    overflow-y: scroll;
+    -webkit-overflow-scrolling:touch;
+}
+
 
 #background_top{
 	 background: url(http://maxf3d.com/wp-content/uploads/2014/08/MacBook-Pro-Desk-Concept-PSD_2200_blurred_dimmed75.jpg) no-repeat center center; 
@@ -130,11 +133,6 @@ body{
   background-size: cover;
   width:100%;
   height:100%;
-  -webkit-transition: height 1s; 
-  -moz-transition: height 1s; 
-  -ms-transition: height 1s; 
-  -o-transition: height 1s; 
-  transition: height 1s;  
   
 }
 
